welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:19: error: not found: value y
			setPos(x,y)
                                 ^